fix: fixed title overlapping with gh link on smaller screens

--- a/src/assets/Project.css
+++ b/src/assets/Project.css
@@ -31,6 +31,18 @@
     top: 0;
     padding: 0.5rem;
 }
+@media (max-width: 450px) {
+    .projectHeader h2 {
+        font-size: 1.5rem;
+    }
+    
+    .projectHeader .link {
+        position: relative;
+        right: 0;
+        top: 0;
+        padding: 0.5rem;
+    }
+}
 
 .projectContainer {
     display: flex;
